parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    AMPERSAND
    AUTO
    BACKSLASH
    BACKSPACE
    B_AND
    B_COMPLEMENT
    B_OR
    B_XOR
    CHAR
    CONST
    DO
    DOT
    DOUBLE_APOS
    DOUBLE_QUOTE
    ENUM
    EXTERN
    FF_PAGEBREAK
    FS_CHAR
    FS_DOUBLE
    FS_FLOAT
    FS_HEX
    FS_INT
    FS_LONG
    FS_LONG_DOUBLE
    FS_OCT
    FS_OCT_LONG
    FS_POINTER
    FS_SCI_NOTATION
    FS_STRING
    FS_UNSIGNED_INT
    FS_UNSIGNED_LONG
    GOTO
    HTAB
    IGNORE
    LBRACKET
    NEWLINE
    NULL
    PP_DATE
    PP_DTMACRO
    PP_ERROR
    PP_FILE
    PP_IF
    PP_IFDEF
    PP_IFNDEF
    PP_LINE
    PP_PRAGMA
    PP_STMACRO
    PP_TIME
    PP_TIMESTAMP
    PP_UNDEF
    QUESTIONMARK
    RBRACKET
    REGISTER
    SHIFT_LEFT
    SHIFT_RIGHT
    SIGNED
    SINGLE_APOS
    SINGLE_QUOTE
    SIZEOF
    STATIC
    STRUCT
    TILDE
    TYPEDEF
    UNION
    UNSIGNED
    VOLTILE
    VTAB

Grammar

Rule 0     S' -> ROOT
Rule 1     ROOT -> PREPROCESOR_DIRECTIVE
Rule 2     ROOT -> DEFINE
Rule 3     ROOT -> INCLUDE
Rule 4     ROOT -> VALUE
Rule 5     ROOT -> NUMBER
Rule 6     ROOT -> CONTROL_STRUCTURES
Rule 7     ROOT -> WHILE_STRUCTURE
Rule 8     ROOT -> SWITCH_STRUCTURE
Rule 9     ROOT -> IF_STRUCTURE
Rule 10    ROOT -> FOR_STRUCTURE
Rule 11    ROOT -> CODE
Rule 12    ROOT -> EXPRESSION
Rule 13    ROOT -> EXPRESSIONS
Rule 14    ROOT -> FUNCTION
Rule 15    ROOT -> INTEGER_TYPE
Rule 16    ROOT -> DECIMAL_TYPE
Rule 17    ROOT -> INTEGER_DECLARATION
Rule 18    ROOT -> DECIMAL_DECLARATION
Rule 19    ROOT -> ASSIGNMENT_DECLARATION
Rule 20    ROOT -> ASSIGNMENT_OPERATOR
Rule 21    ROOT -> COMENTARIOLEX
Rule 22    ROOT -> VARIABLELEX
Rule 23    ROOT -> OPERATOR
Rule 24    ROOT -> OPERATION
Rule 25    ROOT -> OPERATIONS
Rule 26    ROOT -> COMPARISON_OPERATOR
Rule 27    ROOT -> COMPARISON
Rule 28    ROOT -> COMPARISONS
Rule 29    ROOT -> LOGICAL_OPERATOR
Rule 30    ROOT -> STATEMENT
Rule 31    ROOT -> SWITCH_BODY
Rule 32    ROOT -> BUCLE
Rule 33    ROOT -> ELSE_STRUCTURE
Rule 34    ROOT -> FUNCTION_ARGUMENTS
Rule 35    ROOT -> DECLARATIONS
Rule 36    ROOT -> FOR_BODY_STRUCTURE
Rule 37    ROOT -> FOR_ARGUMENTS_STRUCTURE
Rule 38    PREPROCESOR_DIRECTIVE -> DEFINE
Rule 39    PREPROCESOR_DIRECTIVE -> INCLUDE
Rule 40    DEFINE -> PP_DEFINE VARIABLELEX VALUE
Rule 41    INCLUDE -> PP_INCLUDE HEADER_LIB
Rule 42    VALUE -> NUMBER
Rule 43    VALUE -> STRING
Rule 44    VALUE -> CHARACTER
Rule 45    NUMBER -> INTEGER
Rule 46    NUMBER -> DECIMAL
Rule 47    CONTROL_STRUCTURES -> IF_STRUCTURE
Rule 48    CONTROL_STRUCTURES -> FOR_STRUCTURE
Rule 49    CONTROL_STRUCTURES -> WHILE_STRUCTURE
Rule 50    CONTROL_STRUCTURES -> SWITCH_STRUCTURE
Rule 51    BODY_STRUCTURE -> EXPRESSIONS
Rule 52    BODY_STRUCTURE -> EXPRESSIONS BREAK SEMICOLON
Rule 53    BODY_STRUCTURE -> EXPRESSIONS CONTINUE SEMICOLON
Rule 54    WHILE_STRUCTURE -> WHILE LPAREN COMPARISONS RPAREN LCURL_BRACE BODY_STRUCTURE RCURL_BRACE
Rule 55    SWITCH_CASE -> CASE INTEGER COLON EXPRESSIONS BREAK SEMICOLON
Rule 56    SWITCH_DEFAULT -> DEFAULT COLON EXPRESSIONS BREAK SEMICOLON
Rule 57    SWITCH_BODY -> SWITCH_CASE
Rule 58    SWITCH_BODY -> SWITCH_DEFAULT
Rule 59    SWITCH_BODY -> SWITCH_CASE SWITCH_BODY
Rule 60    SWITCH_STRUCTURE -> SWITCH LPAREN COMPARISONS RPAREN LCURL_BRACE SWITCH_BODY RCURL_BRACE
Rule 61    BUCLE -> VARIABLELEX INCREASE
Rule 62    BUCLE -> DECREASE VARIABLELEX
Rule 63    FOR_STRUCTURE -> FOR FOR_ARGUMENTS_STRUCTURE LCURL_BRACE FOR_BODY_STRUCTURE RCURL_BRACE
Rule 64    FOR_ARGUMENTS_STRUCTURE -> LPAREN DECLARATIONS SEMICOLON COMPARISONS SEMICOLON BUCLE RPAREN
Rule 65    FOR_BODY_STRUCTURE -> EXPRESSIONS
Rule 66    FOR_BODY_STRUCTURE -> BREAK SEMICOLON
Rule 67    FOR_BODY_STRUCTURE -> CONTINUE SEMICOLON
Rule 68    IF_STRUCTURE -> IF LPAREN COMPARISONS RPAREN LCURL_BRACE EXPRESSIONS RCURL_BRACE
Rule 69    IF_STRUCTURE -> IF LPAREN COMPARISONS RPAREN LCURL_BRACE EXPRESSIONS RCURL_BRACE ELSE_STRUCTURE
Rule 70    ELSE_STRUCTURE -> ELSE LCURL_BRACE EXPRESSIONS RCURL_BRACE
Rule 71    ELSE_STRUCTURE -> ELSE IF_STRUCTURE
Rule 72    DECLARATIONS -> INTEGER_DECLARATION
Rule 73    DECLARATIONS -> DECIMAL_DECLARATION
Rule 74    CODE -> FUNCTION
Rule 75    CODE -> INTEGER_DECLARATION
Rule 76    CODE -> DECIMAL_DECLARATION
Rule 77    CODE -> ASSIGNMENT_DECLARATION
Rule 78    CODE -> COMENTARIOLEX
Rule 79    EXPRESSION -> CODE SEMICOLON
Rule 80    EXPRESSION -> CONTROL_STRUCTURES
Rule 81    EXPRESSIONS -> EXPRESSION
Rule 82    EXPRESSIONS -> EXPRESSION EXPRESSIONS
Rule 83    FUNCTION -> VARNAME LPAREN FUNCTION_ARGUMENTS RPAREN
Rule 84    FUNCTION_ARGUMENTS -> STATEMENTS
Rule 85    FUNCTION_ARGUMENTS -> COMPARISONS
Rule 86    INTEGER_TYPE -> INT
Rule 87    INTEGER_TYPE -> SHORT
Rule 88    INTEGER_TYPE -> LONG
Rule 89    DECIMAL_TYPE -> FLOAT
Rule 90    DECIMAL_TYPE -> DOUBLE
Rule 91    INTEGER_DECLARATION -> INTEGER_TYPE VARNAME EQUAL INTEGER
Rule 92    DECIMAL_DECLARATION -> DECIMAL_TYPE VARNAME EQUAL DECIMAL
Rule 93    ASSIGNMENT_DECLARATION -> VARNAME ASSIGNMENT_OPERATOR STATEMENT
Rule 94    ASSIGNMENT_OPERATOR -> EQUAL
Rule 95    ASSIGNMENT_OPERATOR -> PLUS_EQUAL
Rule 96    ASSIGNMENT_OPERATOR -> MINUS_EQUAL
Rule 97    ASSIGNMENT_OPERATOR -> DIV_EQUAL
Rule 98    ASSIGNMENT_OPERATOR -> TIMES_EQUAL
Rule 99    ASSIGNMENT_OPERATOR -> MOD_EQUAL
Rule 100   ASSIGNMENT_OPERATOR -> AND_EQUAL
Rule 101   ASSIGNMENT_OPERATOR -> OR_EQUAL
Rule 102   ASSIGNMENT_OPERATOR -> XOR_EQUAL
Rule 103   ASSIGNMENT_OPERATOR -> COMPLEMENT_EQUAL
Rule 104   ASSIGNMENT_OPERATOR -> SHIFTL_EQUAL
Rule 105   ASSIGNMENT_OPERATOR -> SHIFTR_EQUAL
Rule 106   COMENTARIOLEX -> COMMENT
Rule 107   VARIABLELEX -> VARNAME
Rule 108   OPERATOR -> PLUS
Rule 109   OPERATOR -> MINUS
Rule 110   OPERATOR -> TIMES
Rule 111   OPERATOR -> MODULUS
Rule 112   OPERATOR -> DIVIDE
Rule 113   OPERATION -> NUMBER OPERATOR NUMBER
Rule 114   OPERATIONS -> OPERATION
Rule 115   OPERATIONS -> OPERATION OPERATOR OPERATIONS
Rule 116   COMPARISON_OPERATOR -> EQUAL_TO
Rule 117   COMPARISON_OPERATOR -> NOT_EQUAL
Rule 118   COMPARISON_OPERATOR -> GREATER_THAN
Rule 119   COMPARISON_OPERATOR -> LESS_THAN
Rule 120   COMPARISON_OPERATOR -> GREATER_EQUAL
Rule 121   COMPARISON_OPERATOR -> LESS_EQUAL
Rule 122   COMPARISON -> VALUE COMPARISON_OPERATOR VALUE
Rule 123   COMPARISON -> STATEMENT COMPARISON_OPERATOR STATEMENT
Rule 124   COMPARISONS -> COMPARISON
Rule 125   COMPARISONS -> COMPARISON LOGICAL_OPERATOR COMPARISONS
Rule 126   LOGICAL_OPERATOR -> AND
Rule 127   LOGICAL_OPERATOR -> OR
Rule 128   LOGICAL_OPERATOR -> NOT
Rule 129   STATEMENT -> NUMBER
Rule 130   STATEMENT -> VARNAME
Rule 131   STATEMENTS -> STATEMENT
Rule 132   STATEMENTS -> STATEMENT COMMA STATEMENTS
Rule 133   VALUES -> VALUE
Rule 134   VALUES -> VALUE COMMA VALUES
Rule 135   RETURN_TYPE -> INTEGER_TYPE
Rule 136   RETURN_TYPE -> DECIMAL_TYPE
Rule 137   RETURN_TYPE -> VOID
Rule 138   RETURN_STATEMENT -> RETURN PARAMETERS SEMICOLON
Rule 139   RETURN_STATEMENT -> RETURN VALUES SEMICOLON
Rule 140   PARAMETERS -> VARNAME
Rule 141   PARAMETERS -> VARNAME COMMA PARAMETERS
Rule 142   FUNCTION_PROTOTYPE -> RETURN_TYPE VARNAME LPAREN RPAREN LCURL_BRACE EXPRESSIONS RETURN_STATEMENT RCURL_BRACE
Rule 143   FUNCTION_PROTOTYPE -> RETURN_TYPE VARNAME LPAREN PARAMETERS RPAREN LCURL_BRACE EXPRESSIONS RETURN_STATEMENT RCURL_BRACE

Terminals, with rules where they appear

AMPERSAND            : 
AND                  : 126
AND_EQUAL            : 100
AUTO                 : 
BACKSLASH            : 
BACKSPACE            : 
BREAK                : 52 55 56 66
B_AND                : 
B_COMPLEMENT         : 
B_OR                 : 
B_XOR                : 
CASE                 : 55
CHAR                 : 
CHARACTER            : 44
COLON                : 55 56
COMMA                : 132 134 141
COMMENT              : 106
COMPLEMENT_EQUAL     : 103
CONST                : 
CONTINUE             : 53 67
DECIMAL              : 46 92
DECREASE             : 62
DEFAULT              : 56
DIVIDE               : 112
DIV_EQUAL            : 97
DO                   : 
DOT                  : 
DOUBLE               : 90
DOUBLE_APOS          : 
DOUBLE_QUOTE         : 
ELSE                 : 70 71
ENUM                 : 
EQUAL                : 91 92 94
EQUAL_TO             : 116
EXTERN               : 
FF_PAGEBREAK         : 
FLOAT                : 89
FOR                  : 63
FS_CHAR              : 
FS_DOUBLE            : 
FS_FLOAT             : 
FS_HEX               : 
FS_INT               : 
FS_LONG              : 
FS_LONG_DOUBLE       : 
FS_OCT               : 
FS_OCT_LONG          : 
FS_POINTER           : 
FS_SCI_NOTATION      : 
FS_STRING            : 
FS_UNSIGNED_INT      : 
FS_UNSIGNED_LONG     : 
GOTO                 : 
GREATER_EQUAL        : 120
GREATER_THAN         : 118
HEADER_LIB           : 41
HTAB                 : 
IF                   : 68 69
IGNORE               : 
INCREASE             : 61
INT                  : 86
INTEGER              : 45 55 91
LBRACKET             : 
LCURL_BRACE          : 54 60 63 68 69 70 142 143
LESS_EQUAL           : 121
LESS_THAN            : 119
LONG                 : 88
LPAREN               : 54 60 64 68 69 83 142 143
MINUS                : 109
MINUS_EQUAL          : 96
MODULUS              : 111
MOD_EQUAL            : 99
NEWLINE              : 
NOT                  : 128
NOT_EQUAL            : 117
NULL                 : 
OR                   : 127
OR_EQUAL             : 101
PLUS                 : 108
PLUS_EQUAL           : 95
PP_DATE              : 
PP_DEFINE            : 40
PP_DTMACRO           : 
PP_ERROR             : 
PP_FILE              : 
PP_IF                : 
PP_IFDEF             : 
PP_IFNDEF            : 
PP_INCLUDE           : 41
PP_LINE              : 
PP_PRAGMA            : 
PP_STMACRO           : 
PP_TIME              : 
PP_TIMESTAMP         : 
PP_UNDEF             : 
QUESTIONMARK         : 
RBRACKET             : 
RCURL_BRACE          : 54 60 63 68 69 70 142 143
REGISTER             : 
RETURN               : 138 139
RPAREN               : 54 60 64 68 69 83 142 143
SEMICOLON            : 52 53 55 56 64 64 66 67 79 138 139
SHIFTL_EQUAL         : 104
SHIFTR_EQUAL         : 105
SHIFT_LEFT           : 
SHIFT_RIGHT          : 
SHORT                : 87
SIGNED               : 
SINGLE_APOS          : 
SINGLE_QUOTE         : 
SIZEOF               : 
STATIC               : 
STRING               : 43
STRUCT               : 
SWITCH               : 60
TILDE                : 
TIMES                : 110
TIMES_EQUAL          : 98
TYPEDEF              : 
UNION                : 
UNSIGNED             : 
VARNAME              : 83 91 92 93 107 130 140 141 142 143
VOID                 : 137
VOLTILE              : 
VTAB                 : 
WHILE                : 54
XOR_EQUAL            : 102
error                : 

Nonterminals, with rules where they appear

ASSIGNMENT_DECLARATION : 19 77
ASSIGNMENT_OPERATOR  : 20 93
BODY_STRUCTURE       : 54
BUCLE                : 32 64
CODE                 : 11 79
COMENTARIOLEX        : 21 78
COMPARISON           : 27 124 125
COMPARISONS          : 28 54 60 64 68 69 85 125
COMPARISON_OPERATOR  : 26 122 123
CONTROL_STRUCTURES   : 6 80
DECIMAL_DECLARATION  : 18 73 76
DECIMAL_TYPE         : 16 92 136
DECLARATIONS         : 35 64
DEFINE               : 2 38
ELSE_STRUCTURE       : 33 69
EXPRESSION           : 12 81 82
EXPRESSIONS          : 13 51 52 53 55 56 65 68 69 70 82 142 143
FOR_ARGUMENTS_STRUCTURE : 37 63
FOR_BODY_STRUCTURE   : 36 63
FOR_STRUCTURE        : 10 48
FUNCTION             : 14 74
FUNCTION_ARGUMENTS   : 34 83
FUNCTION_PROTOTYPE   : 
IF_STRUCTURE         : 9 47 71
INCLUDE              : 3 39
INTEGER_DECLARATION  : 17 72 75
INTEGER_TYPE         : 15 91 135
LOGICAL_OPERATOR     : 29 125
NUMBER               : 5 42 113 113 129
OPERATION            : 24 114 115
OPERATIONS           : 25 115
OPERATOR             : 23 113 115
PARAMETERS           : 138 141 143
PREPROCESOR_DIRECTIVE : 1
RETURN_STATEMENT     : 142 143
RETURN_TYPE          : 142 143
ROOT                 : 0
STATEMENT            : 30 93 123 123 131 132
STATEMENTS           : 84 132
SWITCH_BODY          : 31 59 60
SWITCH_CASE          : 57 59
SWITCH_DEFAULT       : 58
SWITCH_STRUCTURE     : 8 50
VALUE                : 4 40 122 122 133 134
VALUES               : 134 139
VARIABLELEX          : 22 40 61 62
WHILE_STRUCTURE      : 7 49

Parsing method: LALR

state 0

    (0) S' -> . ROOT
    (1) ROOT -> . PREPROCESOR_DIRECTIVE
    (2) ROOT -> . DEFINE
    (3) ROOT -> . INCLUDE
    (4) ROOT -> . VALUE
    (5) ROOT -> . NUMBER
    (6) ROOT -> . CONTROL_STRUCTURES
    (7) ROOT -> . WHILE_STRUCTURE
    (8) ROOT -> . SWITCH_STRUCTURE
    (9) ROOT -> . IF_STRUCTURE
    (10) ROOT -> . FOR_STRUCTURE
    (11) ROOT -> . CODE
    (12) ROOT -> . EXPRESSION
    (13) ROOT -> . EXPRESSIONS
    (14) ROOT -> . FUNCTION
    (15) ROOT -> . INTEGER_TYPE
    (16) ROOT -> . DECIMAL_TYPE
    (17) ROOT -> . INTEGER_DECLARATION
    (18) ROOT -> . DECIMAL_DECLARATION
    (19) ROOT -> . ASSIGNMENT_DECLARATION
    (20) ROOT -> . ASSIGNMENT_OPERATOR
    (21) ROOT -> . COMENTARIOLEX
    (22) ROOT -> . VARIABLELEX
    (23) ROOT -> . OPERATOR
    (24) ROOT -> . OPERATION
    (25) ROOT -> . OPERATIONS
    (26) ROOT -> . COMPARISON_OPERATOR
    (27) ROOT -> . COMPARISON
    (28) ROOT -> . COMPARISONS
    (29) ROOT -> . LOGICAL_OPERATOR
    (30) ROOT -> . STATEMENT
    (31) ROOT -> . SWITCH_BODY
    (32) ROOT -> . BUCLE
    (33) ROOT -> . ELSE_STRUCTURE
    (34) ROOT -> . FUNCTION_ARGUMENTS
    (35) ROOT -> . DECLARATIONS
    (36) ROOT -> . FOR_BODY_STRUCTURE
    (37) ROOT -> . FOR_ARGUMENTS_STRUCTURE
    (38) PREPROCESOR_DIRECTIVE -> . DEFINE
    (39) PREPROCESOR_DIRECTIVE -> . INCLUDE
    (40) DEFINE -> . PP_DEFINE VARIABLELEX VALUE
    (41) INCLUDE -> . PP_INCLUDE HEADER_LIB
    (42) VALUE -> . NUMBER
    (43) VALUE -> . STRING
    (44) VALUE -> . CHARACTER
    (45) NUMBER -> . INTEGER
    (46) NUMBER -> . DECIMAL
    (47) CONTROL_STRUCTURES -> . IF_STRUCTURE
    (48) CONTROL_STRUCTURES -> . FOR_STRUCTURE
    (49) CONTROL_STRUCTURES -> . WHILE_STRUCTURE
    (50) CONTROL_STRUCTURES -> . SWITCH_STRUCTURE
    (54) WHILE_STRUCTURE -> . WHILE LPAREN COMPARISONS RPAREN LCURL_BRACE BODY_STRUCTURE RCURL_BRACE
    (60) SWITCH_STRUCTURE -> . SWITCH LPAREN COMPARISONS RPAREN LCURL_BRACE SWITCH_BODY RCURL_BRACE
    (68) IF_STRUCTURE -> . IF LPAREN COMPARISONS RPAREN LCURL_BRACE EXPRESSIONS RCURL_BRACE
    (69) IF_STRUCTURE -> . IF LPAREN COMPARISONS RPAREN LCURL_BRACE EXPRESSIONS RCURL_BRACE ELSE_STRUCTURE
    (63) FOR_STRUCTURE -> . FOR FOR_ARGUMENTS_STRUCTURE LCURL_BRACE FOR_BODY_STRUCTURE RCURL_BRACE
    (74) CODE -> . FUNCTION
    (75) CODE -> . INTEGER_DECLARATION
    (76) CODE -> . DECIMAL_DECLARATION
    (77) CODE -> . ASSIGNMENT_DECLARATION
    (78) CODE -> . COMENTARIOLEX
    (79) EXPRESSION -> . CODE SEMICOLON
    (80) EXPRESSION -> . CONTROL_STRUCTURES
    (81) EXPRESSIONS -> . EXPRESSION
    (82) EXPRESSIONS -> . EXPRESSION EXPRESSIONS
    (83) FUNCTION -> . VARNAME LPAREN FUNCTION_ARGUMENTS RPAREN
    (86) INTEGER_TYPE -> . INT
    (87) INTEGER_TYPE -> . SHORT
    (88) INTEGER_TYPE -> . LONG
    (89) DECIMAL_TYPE -> . FLOAT
    (90) DECIMAL_TYPE -> . DOUBLE
    (91) INTEGER_DECLARATION -> . INTEGER_TYPE VARNAME EQUAL INTEGER
    (92) DECIMAL_DECLARATION -> . DECIMAL_TYPE VARNAME EQUAL DECIMAL
    (93) ASSIGNMENT_DECLARATION -> . VARNAME ASSIGNMENT_OPERATOR STATEMENT
    (94) ASSIGNMENT_OPERATOR -> . EQUAL
    (95) ASSIGNMENT_OPERATOR -> . PLUS_EQUAL
    (96) ASSIGNMENT_OPERATOR -> . MINUS_EQUAL
    (97) ASSIGNMENT_OPERATOR -> . DIV_EQUAL
    (98) ASSIGNMENT_OPERATOR -> . TIMES_EQUAL
    (99) ASSIGNMENT_OPERATOR -> . MOD_EQUAL
    (100) ASSIGNMENT_OPERATOR -> . AND_EQUAL
    (101) ASSIGNMENT_OPERATOR -> . OR_EQUAL
    (102) ASSIGNMENT_OPERATOR -> . XOR_EQUAL
    (103) ASSIGNMENT_OPERATOR -> . COMPLEMENT_EQUAL
    (104) ASSIGNMENT_OPERATOR -> . SHIFTL_EQUAL
    (105) ASSIGNMENT_OPERATOR -> . SHIFTR_EQUAL
    (106) COMENTARIOLEX -> . COMMENT
    (107) VARIABLELEX -> . VARNAME
    (108) OPERATOR -> . PLUS
    (109) OPERATOR -> . MINUS
    (110) OPERATOR -> . TIMES
    (111) OPERATOR -> . MODULUS
    (112) OPERATOR -> . DIVIDE
    (113) OPERATION -> . NUMBER OPERATOR NUMBER
    (114) OPERATIONS -> . OPERATION
    (115) OPERATIONS -> . OPERATION OPERATOR OPERATIONS
    (116) COMPARISON_OPERATOR -> . EQUAL_TO
    (117) COMPARISON_OPERATOR -> . NOT_EQUAL
    (118) COMPARISON_OPERATOR -> . GREATER_THAN
    (119) COMPARISON_OPERATOR -> . LESS_THAN
    (120) COMPARISON_OPERATOR -> . GREATER_EQUAL
    (121) COMPARISON_OPERATOR -> . LESS_EQUAL
    (122) COMPARISON -> . VALUE COMPARISON_OPERATOR VALUE
    (123) COMPARISON -> . STATEMENT COMPARISON_OPERATOR STATEMENT
    (124) COMPARISONS -> . COMPARISON
    (125) COMPARISONS -> . COMPARISON LOGICAL_OPERATOR COMPARISONS
    (126) LOGICAL_OPERATOR -> . AND
    (127) LOGICAL_OPERATOR -> . OR
    (128) LOGICAL_OPERATOR -> . NOT
    (129) STATEMENT -> . NUMBER
    (130) STATEMENT -> . VARNAME
    (57) SWITCH_BODY -> . SWITCH_CASE
    (58) SWITCH_BODY -> . SWITCH_DEFAULT
    (59) SWITCH_BODY -> . SWITCH_CASE SWITCH_BODY
    (61) BUCLE -> . VARIABLELEX INCREASE
    (62) BUCLE -> . DECREASE VARIABLELEX
    (70) ELSE_STRUCTURE -> . ELSE LCURL_BRACE EXPRESSIONS RCURL_BRACE
    (71) ELSE_STRUCTURE -> . ELSE IF_STRUCTURE
    (84) FUNCTION_ARGUMENTS -> . STATEMENTS
    (85) FUNCTION_ARGUMENTS -> . COMPARISONS
    (72) DECLARATIONS -> . INTEGER_DECLARATION
    (73) DECLARATIONS -> . DECIMAL_DECLARATION
    (65) FOR_BODY_STRUCTURE -> . EXPRESSIONS
    (66) FOR_BODY_STRUCTURE -> . BREAK SEMICOLON
    (67) FOR_BODY_STRUCTURE -> . CONTINUE SEMICOLON
    (64) FOR_ARGUMENTS_STRUCTURE -> . LPAREN DECLARATIONS SEMICOLON COMPARISONS SEMICOLON BUCLE RPAREN
    (55) SWITCH_CASE -> . CASE INTEGER COLON EXPRESSIONS BREAK SEMICOLON
    (56) SWITCH_DEFAULT -> . DEFAULT COLON EXPRESSIONS BREAK SEMICOLON
    (131) STATEMENTS -> . STATEMENT
    (132) STATEMENTS -> . STATEMENT COMMA STATEMENTS

    PP_DEFINE       shift and go to state 39
    PP_INCLUDE      shift and go to state 40
    STRING          shift and go to state 41
    CHARACTER       shift and go to state 42
    INTEGER         shift and go to state 43
    DECIMAL         shift and go to state 44
    WHILE           shift and go to state 45
    SWITCH          shift and go to state 47
    IF              shift and go to state 48
    FOR             shift and go to state 49
    VARNAME         shift and go to state 50
    INT             shift and go to state 51
    SHORT           shift and go to state 52
    LONG            shift and go to state 53
    FLOAT           shift and go to state 54
    DOUBLE          shift and go to state 55
    EQUAL           shift and go to state 56
    PLUS_EQUAL      shift and go to state 57
    MINUS_EQUAL     shift and go to state 58
    DIV_EQUAL       shift and go to state 59
    TIMES_EQUAL     shift and go to state 60
    MOD_EQUAL       shift and go to state 61
    AND_EQUAL       shift and go to state 62
    OR_EQUAL        shift and go to state 63
    XOR_EQUAL       shift and go to state 64
    COMPLEMENT_EQUAL shift and go to state 65
    SHIFTL_EQUAL    shift and go to state 66
    SHIFTR_EQUAL    shift and go to state 67
    COMMENT         shift and go to state 68
    PLUS            shift and go to state 69
    MINUS           shift and go to state 70
    TIMES           shift and go to state 71
    MODULUS         shift and go to state 72
    DIVIDE          shift and go to state 73
    EQUAL_TO        shift and go to state 74
    NOT_EQUAL       shift and go to state 75
    GREATER_THAN    shift and go to state 76
    LESS_THAN       shift and go to state 77
    GREATER_EQUAL   shift and go to state 78
    LESS_EQUAL      shift and go to state 79
    AND             shift and go to state 80
    OR              shift and go to state 81
    NOT             shift and go to state 82
    DECREASE        shift and go to state 85
    ELSE            shift and go to state 86
    BREAK           shift and go to state 88
    CONTINUE        shift and go to state 89
    LPAREN          shift and go to state 46
    CASE            shift and go to state 90
    DEFAULT         shift and go to state 91

    ROOT                           shift and go to state 1
    PREPROCESOR_DIRECTIVE          shift and go to state 2
    DEFINE                         shift and go to state 3
    INCLUDE                        shift and go to state 4
    VALUE                          shift and go to state 5
    NUMBER                         shift and go to state 6
    CONTROL_STRUCTURES             shift and go to state 7
    WHILE_STRUCTURE                shift and go to state 8
    SWITCH_STRUCTURE               shift and go to state 9
    IF_STRUCTURE                   shift and go to state 10
    FOR_STRUCTURE                  shift and go to state 11
    CODE                           shift and go to state 12
    EXPRESSION                     shift and go to state 13
    EXPRESSIONS                    shift and go to state 14
    FUNCTION                       shift and go to state 15
    INTEGER_TYPE                   shift and go to state 16
    DECIMAL_TYPE                   shift and go to state 17
    INTEGER_DECLARATION            shift and go to state 18
    DECIMAL_DECLARATION            shift and go to state 19
    ASSIGNMENT_DECLARATION         shift and go to state 20
    ASSIGNMENT_OPERATOR            shift and go to state 21
    COMENTARIOLEX                  shift and go to state 22
    VARIABLELEX                    shift and go to state 23
    OPERATOR                       shift and go to state 24
    OPERATION                      shift and go to state 25
    OPERATIONS                     shift and go to state 26
    COMPARISON_OPERATOR            shift and go to state 27
    COMPARISON                     shift and go to state 28
    COMPARISONS                    shift and go to state 29
    LOGICAL_OPERATOR               shift and go to state 30
    STATEMENT                      shift and go to state 31
    SWITCH_BODY                    shift and go to state 32
    BUCLE                          shift and go to state 33
    ELSE_STRUCTURE                 shift and go to state 34
    FUNCTION_ARGUMENTS             shift and go to state 35
    DECLARATIONS                   shift and go to state 36
    FOR_BODY_STRUCTURE             shift and go to state 37
    FOR_ARGUMENTS_STRUCTURE        shift and go to state 38
    SWITCH_CASE                    shift and go to state 83
    SWITCH_DEFAULT                 shift and go to state 84
    STATEMENTS                     shift and go to state 87

state 1

    (0) S' -> ROOT .



state 2

    (1) ROOT -> PREPROCESOR_DIRECTIVE .

    $end            reduce using rule 1 (ROOT -> PREPROCESOR_DIRECTIVE .)


state 3

    (2) ROOT -> DEFINE .
    (38) PREPROCESOR_DIRECTIVE -> DEFINE .

  ! reduce/reduce conflict for $end resolved using rule 2 (ROOT -> DEFINE .)
    $end            reduce using rule 2 (ROOT -> DEFINE .)

  ! $end            [ reduce using rule 38 (PREPROCESOR_DIRECTIVE -> DEFINE .) ]


state 4

    (3) ROOT -> INCLUDE .
    (39) PREPROCESOR_DIRECTIVE -> INCLUDE .

  ! reduce/reduce conflict for $end resolved using rule 3 (ROOT -> INCLUDE .)
    $end            reduce using rule 3 (ROOT -> INCLUDE .)

  ! $end            [ reduce using rule 39 (PREPROCESOR_DIRECTIVE -> INCLUDE .) ]


state 5

    (4) ROOT -> VALUE .
    (122) COMPARISON -> VALUE . COMPARISON_OPERATOR VALUE
    (116) COMPARISON_OPERATOR -> . EQUAL_TO
    (117) COMPARISON_OPERATOR -> . NOT_EQUAL
    (118) COMPARISON_OPERATOR -> . GREATER_THAN
    (119) COMPARISON_OPERATOR -> . LESS_THAN
    (120) COMPARISON_OPERATOR -> . GREATER_EQUAL
    (121) COMPARISON_OPERATOR -> . LESS_EQUAL

    $end            reduce using rule 4 (ROOT -> VALUE .)
    EQUAL_TO        shift and go to state 74
    NOT_EQUAL       shift and go to state 75
    GREATER_THAN    shift and go to state 76
    LESS_THAN       shift and go to state 77
    GREATER_EQUAL   shift and go to state 78
    LESS_EQUAL      shift and go to state 79

    COMPARISON_OPERATOR            shift and go to state 92

state 6

    (5) ROOT -> NUMBER .
    (42) VALUE -> NUMBER .
    (113) OPERATION -> NUMBER . OPERATOR NUMBER
    (129) STATEMENT -> NUMBER .
    (108) OPERATOR -> . PLUS
    (109) OPERATOR -> . MINUS
    (110) OPERATOR -> . TIMES
    (111) OPERATOR -> . MODULUS
    (112) OPERATOR -> . DIVIDE
